--- a/views/index.html
+++ b/views/index.html
@@ -240,8 +240,8 @@
 <script src="/js/lib/backbone.js"></script>	
 <script src="/js/lib/backbone-associations.js"></script>	
 <script src="/js/lib/tinymce/tinymce.min.js"></script>
-<!-- Routers -->
-<script src="/js/routers/router.js"></script>
+<!-- App Config -->
+<script src="/js/config.js"></script>	
 <!-- Models -->
 <script src="/js/models/comment.js"></script>
 <script src="/js/models/post.js"></script>	
@@ -256,6 +256,8 @@
 <script src="/js/views/archive-view.js"></script>
 <script src="/js/views/comment-view.js"></script>
 <script src="/js/views/404-view.js"></script>
+<!-- Routers -->
+<script src="/js/routers/router.js"></script>
 <!-- App Start -->
 <script src="/js/app.js"></script>	
 
