--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body {  position: relative; }
 
 .post-item {
 	margin-bottom: 5px;
-	max-height: 250px;
+	height: auto;
 	border-radius: 5px;
 	overflow: hidden;
 	-webkit-transition: all ease-in 0.3s;
@@ -84,21 +84,6 @@ body {  position: relative; }
     position: absolute;
     bottom: 10px;
     right: 10px;
-}
-.read-more-btn {
-	padding: 3px;
-	padding-bottom: 6px;
-	background: #fcf8e3;
-	-webkit-transition: all ease-in 0.3s;
-	-moz-transition: all ease-in 0.3s;
-	-ms-transition: all ease-in 0.3s;
-	transition: all ease-in 0.3s; 
-}
-.read-more-btn:hover {
-	background: #efefef;
-}
-.post-content-wrapper {
-
 }
 
 @media (max-width: 768px) { 
